[gd_scene load_steps=5 format=2]

[node name="UnjamMinigameDemo" type="Control"]
script = ExtResource( 1 )

[node name="KeycardUnjamMinigame" parent="." type="Control"]
script = ExtResource( 2 )

[node name="StatusLabel" parent="." type="Label"]
rect_position = Vector2(16, 16)
text = "Status"

[node name="RestartButton" parent="." type="Button"]
rect_position = Vector2(16, 56)
text = "Restart"

[node name="AccessibilityButton" parent="." type="Button"]
rect_position = Vector2(160, 56)
text = "Accessibility: OFF"

[ext_resource path="res://tests/UnjamMinigameDemo.gd" type="Script" id="1"]
[ext_resource path="res://scripts/KeycardUnjamMinigame.gd" type="Script" id="2"]